--- a/src/components/Section/Container/Container.module.css
+++ b/src/components/Section/Container/Container.module.css
@@ -1,5 +1,13 @@
 .container {
   margin: 0 auto;
-  padding: 0 15px;
+  padding: var(--padding-container);
   max-width: 480px;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    max-width: 1280px;
+  }
 }
