--- a/src/components/SuperheroList/SuperheroList.module.css
+++ b/src/components/SuperheroList/SuperheroList.module.css
@@ -1,7 +1,11 @@
 .superheroList {
-  /* display: flex;
-  gap: 30px;
-  flex-wrap: wrap; */
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 15px;
+  flex-wrap: wrap;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    gap: 30px;
+  }
 }
