--- a/src/components/SuperheroInfo/SuperheroInfo.module.css
+++ b/src/components/SuperheroInfo/SuperheroInfo.module.css
@@ -2,6 +2,12 @@
   margin-top: 20px;
   width: 100%;
   height: auto;
+
+  @media screen and (min-width: 768px) {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .superheroPosterImg {
